@@ -1,6 +1,7 @@
 == HEAD
 * Link to Rubydoc in documentation
 * Fix header in documentation
+* Fix no_login_redirect to default to a properly named controller
 
 == 0.1.0
 * Fix PasswordStrategy to use configuration options
